k8s/netes/overlays/passwords/pwpusher.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: password-pusher
  name: password-pusher
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 5100
    protocol: TCP
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: password-pusher
  name: password-pusher
  namespace: passwords
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: password-pusher
  template:
    metadata:
      labels:
        app: password-pusher
    spec:
      containers:
      - env:
        - name: PWP__HOST_PROTOCOL
          value: https
        - name: PWP__HOST_DOMAIN
          value: passwords.maximillian.se
        - name: PWP__BRAND__TITLE
          value: Secrets sharing with your colleagfriendsues
        - name: PWP__BRAND__TAGLINE
          value: NEVER email or slack passwords again
        - name: PWP__BRAND__SHOW_FOOTER_MENU
          value: "false"
        - name: PWP__OVERRIDE_BASE_URL
          value: https://passwords.maximillian.se
        image: docker.io/pglombardo/pwpush-ephemeral:latest
        imagePullPolicy: Always
        name: container
        ports:
        - containerPort: 5100
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: passwords
  namespace: passwords
spec:
  hostnames:
  - passwords.maximillian.se
  parentRefs:
  - name: external-gateway
    namespace: kube-system
    group: gateway.networking.k8s.io	
    kind: Gateway
  rules:
  - backendRefs:
    - kind: Service
      name: password-pusher
      port: 8080
